--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@wdio/local-runner": "^8.27.0",
     "@wdio/mocha-framework": "^8.27.0",
     "@wdio/spec-reporter": "^8.27.0",
+    "allure-commandline": "^2.25.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
