--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
       run: npm install
 
     - name: Run tests
-      run: npm test
+      run: npm run test:ci
 
     - name: Upload Allure report as an artifact
       uses: actions/upload-artifact@v4
