--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,8 +28,10 @@ jobs:
     - name: Run tests
       run: npm run test:ci
 
-    - name: Upload Allure report as an artifact
+    - name: Upload Allure reports as artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: allure-report
-        path: allure-report/
+        name: allure-artifacts
+        path: |
+          allure-report/
+          allure-results/
